--- a/package.json
+++ b/package.json
@@ -12,11 +12,17 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "css-loader": "^2.1.1",
+    "handlebars": "^4.1.1",
+    "node-sass": "^4.11.0",
+    "sass-loader": "^7.1.0",
+    "style-loader": "^0.23.1",
     "webpack": "^4.29.6",
     "webpack-cli": "^3.3.0",
     "webpack-dev-server": "^3.2.1"
   },
   "dependencies": {
+    "handlebars-loader": "^1.7.1",
     "jquery": "^3.3.1",
     "lodash": "^4.17.11"
   }
