--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "npx webpack-dev-server",
-    "build": "cp index.html dist/ && npx webpack",
+    "build": "cp -r index.html css/ dist/ && npx webpack",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
